Feat: script create order in b14g marketplace

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "coinselect": "3.1.13",
     "coinselect-segwit": "1.0.2",
     "ecpair": "2.1.0",
+    "ethers": "^6.13.5",
     "patch-package": "8.0.0",
     "regtest-client": "0.2.1",
     "tiny-secp256k1": "2.2.3"
